src/test/ui/deprecation/invalid-literal.stderr
error: attribute must be of the form `#[deprecated]` or `#[deprecated(/*opt*/ since = "version", /*opt*/ note = "reason)]` or `#[deprecated = "reason"]`
  --> $DIR/invalid-literal.rs:1:1
   |
LL | #[deprecated = b"test"]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

