src/test/ui/deprecation/invalid-literal.rs
#[deprecated = b"test"] //~ ERROR attribute must be of the form
fn foo() {}

fn main() {}
